[tool.poetry]
name = "gingerbread"
version = "0.2.4"
description = "Researcher template that fits with NeoMedSys"
authors = ["Martin Rovang <martinrovang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.2"
pymedquery = "^2.11.3b0"
wandb = "^0.13.10"
scikit-learn = "^1.2.1"
monai = "^1.1.0"
blosc = "^1.11.1"
h5py = "^3.8.0"
beaker = "^1.12.1"
nibabel = "^5.0.1"
pytest = "^7.2.1"
toml = "^0.10.2"
requests = "^2.28.2"
furo = "^2022.12.7"
beartype = "^0.12.0"
loguru = "^0.6.0"
matplotlib = "^3.7.1"
simpleitk = "^2.2.1"
uvicorn = "^0.21.1"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
tqdm = "^4.65.0"
libclang = "^16.0.0"
tensorflow-gpu = "2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"